[gd_scene load_steps=15 format=3 uid="uid://b3a6itpc2glm7"]

[ext_resource type="Script" path="res://scenes/mainMenu/mainMenu.gd" id="1_kicl8"]
[ext_resource type="Texture2D" uid="uid://b82yxfkv2mj4o" path="res://media/images/egnoroth_coast.webp" id="1_nxp2n"]
[ext_resource type="Texture2D" uid="uid://dvsquse84r6ts" path="res://media/icons/folderOpen.svg" id="3_312et"]
[ext_resource type="Texture2D" uid="uid://d1rql44soqs4m" path="res://media/images/RealmRendererLogo.svg" id="3_bjoe2"]
[ext_resource type="Texture2D" uid="uid://bhq6j1wwlr8i0" path="res://media/icons/add.svg" id="4_7jwml"]
[ext_resource type="Texture2D" uid="uid://cs3fjjiritnke" path="res://media/icons/delete.svg" id="4_honq5"]
[ext_resource type="Texture2D" uid="uid://dt3bspbajascj" path="res://media/icons/quit.svg" id="5_m0rwh"]
[ext_resource type="Shader" path="res://media/shaders/menuBlur.gdshader" id="8_xc0cx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2s6ir"]
draw_center = false
border_color = Color(1, 1, 1, 0.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_npnre"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo868"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmcc8"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tlw48"]
shader = ExtResource("8_xc0cx")
shader_parameter/blur_amount = 1.0
shader_parameter/mix_amount = 0.25
shader_parameter/color_over = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fej6w"]

[node name="mainMenu" type="Control"]
visibility_layer = 1025
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kicl8")

[node name="playersWindow" type="Window" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
disable_3d = true
canvas_cull_mask = 4294965248
mode = 3
title = "Player's view"
size = Vector2i(1280, 720)
visible = false
unfocusable = true

[node name="CanvasLayer" type="CanvasLayer" parent="playersWindow"]
follow_viewport_enabled = true

[node name="passepartout" type="Panel" parent="playersWindow/CanvasLayer"]
unique_name_in_owner = true
visibility_layer = 32768
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2s6ir")

[node name="screensaver" type="TextureRect" parent="playersWindow/CanvasLayer"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
visibility_layer = 32768
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.169312
offset_right = 0.169312
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nxp2n")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="."]
visibility_layer = 1025
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nxp2n")
expand_mode = 3
stretch_mode = 4

[node name="Panel" type="Panel" parent="."]
visibility_layer = 1025
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_npnre")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
visibility_layer = 1025
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 76
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
visibility_layer = 1025
layout_mode = 2
theme_override_constants/separation = 5

[node name="Panel2" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
visibility_layer = 1025
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_lo868")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/Panel2"]
visibility_layer = 1025
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/Panel2/MarginContainer"]
visibility_layer = 1025
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="sessionsContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Panel2/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
visibility_layer = 1025
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Panel" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
visibility_layer = 1025
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qmcc8")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/Panel"]
visibility_layer = 1025
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer"]
visibility_layer = 1025
layout_mode = 2
alignment = 2

[node name="open" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1025
layout_mode = 2
tooltip_text = "Open selected session"
mouse_default_cursor_shape = 2
disabled = true
text = "Open"
icon = ExtResource("3_312et")

[node name="delete" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1025
layout_mode = 2
tooltip_text = "Create new session"
mouse_default_cursor_shape = 2
disabled = true
text = "Delete"
icon = ExtResource("4_honq5")

[node name="new" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1025
layout_mode = 2
tooltip_text = "Create new session"
mouse_default_cursor_shape = 2
text = "New"
icon = ExtResource("4_7jwml")

[node name="quit" type="Button" parent="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1025
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Quit Realm Render"
mouse_default_cursor_shape = 2
text = "Quit"
icon = ExtResource("5_m0rwh")

[node name="TextureRect" type="TextureRect" parent="Panel"]
visibility_layer = 1025
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
texture = ExtResource("3_bjoe2")
expand_mode = 2

[node name="versionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -22.3333
grow_horizontal = 0
grow_vertical = 0

[node name="menuBlur" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_tlw48")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="newSessionDialog" type="AcceptDialog" parent="menuBlur"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "New Session"
initial_position = 1
size = Vector2i(360, 92)
ok_button_text = "Create"

[node name="newSessionForm" type="VBoxContainer" parent="menuBlur/newSessionDialog"]
unique_name_in_owner = true
visibility_layer = 1025
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="sessionName" type="LineEdit" parent="menuBlur/newSessionDialog/newSessionForm"]
unique_name_in_owner = true
visibility_layer = 1025
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_fej6w")
placeholder_text = "Session name"
alignment = 1

[node name="confirmDialog" type="ConfirmationDialog" parent="menuBlur"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(252, 100)
ok_button_text = "Confirm"

[node name="confirmLabel" type="Label" parent="menuBlur/confirmDialog"]
unique_name_in_owner = true
offset_left = 5.0
offset_top = 5.0
offset_right = 247.0
offset_bottom = 52.0
text = "Quit session manager?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="canceled" from="menuBlur/newSessionDialog" to="." method="_on_newSessionDialog_canceled"]
[connection signal="confirmed" from="menuBlur/newSessionDialog" to="." method="_on_newSessionDialog_confirmed"]
